<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.waenhancer.ui.fragments.GeneralFragment$HomeGeneralPreference"
        app:iconSpaceReserved="false"
        app:title="@string/general" />

    <Preference
        app:fragment="com.waenhancer.ui.fragments.GeneralFragment$HomeScreenGeneralPreference"
        app:iconSpaceReserved="false"
        app:title="@string/home_screen" />

    <Preference
        app:fragment="com.waenhancer.ui.fragments.GeneralFragment$ConversationGeneralPreference"
        app:iconSpaceReserved="false"
        app:title="@string/conversation" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/status">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="autonext_status"
            app:summary="@string/disable_auto_status_sum"
            app:title="@string/disable_auto_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="copystatus"
            app:summary="@string/enable_copy_status_sum"
            app:title="@string/enable_copy_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="toast_viewed_status"
            app:summary="@string/toast_on_viewed_status_sum"
            app:title="@string/toast_on_viewed_status" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="enable_spy"
            app:summary="@string/enable_spy_sum"
            app:title="@string/enable_spy" />

    </PreferenceCategory>

    <com.waenhancer.preference.ProPreferenceCategory
        app:key="customize_status_view_category"
        app:iconSpaceReserved="false"
        app:title="@string/customize_status_view_title">

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_bottom_tile"
            app:summary="@string/remove_status_bottom_tile_sum"
            app:title="@string/remove_status_bottom_tile" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_quick_reactions"
            app:summary="@string/remove_status_quick_reactions_sum"
            app:title="@string/remove_status_quick_reactions" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="remove_status_heart_button"
            app:summary="@string/remove_status_heart_button_sum"
            app:title="@string/remove_status_heart_button" />


        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="status_bottom_play_pause_button"
            app:summary="@string/status_bottom_play_pause_button_sum"
            app:title="@string/status_bottom_play_pause_button" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="add_status_reply_menu_item"
            app:summary="@string/add_status_reply_menu_item_sum"
            app:title="@string/add_status_reply_menu_item" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="status_video_fast_gesture"
            app:summary="@string/status_video_fast_gesture_sum"
            app:title="@string/status_video_fast_gesture" />

        <ListPreference
            android:defaultValue="2.0"
            android:entries="@array/status_fast_speed_entries"
            android:entryValues="@array/status_fast_speed_values"
            app:dependency="status_video_fast_gesture"
            app:key="status_video_fast_speed"
            app:summary="@string/status_video_fast_speed_sum"
            app:title="@string/status_video_fast_speed" />


    </com.waenhancer.preference.ProPreferenceCategory>

</PreferenceScreen>
