<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general">

        <ListPreference
            app:entries="@array/thememode_entries"
            app:entryValues="@array/thememode_values"
            app:key="thememode"
            app:summary="%s"
            app:title="@string/theme_mode" />

        <ListPreference
            app:defaultValue="preset"
            app:entries="@array/wae_color_mode_entries"
            app:entryValues="@array/wae_color_mode_values"
            app:key="wae_color_mode"
            app:summary="%s"
            app:title="@string/wae_color_mode" />

        <ListPreference
            app:defaultValue="green"
            app:entries="@array/wae_color_preset_entries"
            app:entryValues="@array/wae_color_preset_values"
            app:key="wae_color_preset"
            app:summary="%s"
            app:title="@string/wae_color_preset" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="update_check"
            app:defaultValue="true"
            app:summary="@string/update_check_sum"
            app:title="@string/update_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="disable_expiration"
            app:summary="@string/disable_whatsapp_expiration_sum"
            app:title="@string/disable_whatsapp_expiration" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="force_restore_backup_feature"
            app:summary="@string/force_restore_backup_summary"
            app:title="@string/force_restore_backup" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="lite_mode"
            app:summary="@string/lite_mode_sum"
            app:title="@string/lite_mode" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="force_english"
            app:title="@string/force_english" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="true"
            app:key="show_hook_toast"
            app:summary="@string/show_hook_toast_sum"
            app:title="@string/show_hook_toast" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="enable_crash_analytics"
            app:title="@string/enable_crash_analytics"
            app:summary="@string/enable_crash_analytics_sum" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="bypass_version_check"
            app:summary="@string/disable_version_check_sum"
            app:title="@string/disable_version_check" />

        <rikka.material.preference.MaterialSwitchPreference
            app:defaultValue="false"
            app:key="customize_supported_versions"
            app:summary="@string/customize_supported_versions_sum"
            app:title="@string/customize_supported_versions" />

        <Preference
            app:dependency="customize_supported_versions"
            app:key="manage_supported_versions"
            app:summary="@string/manage_supported_versions_sum"
            app:title="@string/manage_supported_versions">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.waenhancer"
                android:targetClass="com.waenhancer.ui.fragments.SupportedVersionsActivity" />
        </Preference>

        <rikka.material.preference.MaterialSwitchPreference
            android:summary="@string/bootloader_spoofer_sum"
            android:title="@string/bootloader_spoofer"
            app:key="bootloader_spoofer" />

        <rikka.material.preference.MaterialSwitchPreference
            android:summary="@string/bootloader_spoofer_sum"
            android:title="Enable Custom KeyBox"
            app:key="bootloader_spoofer_custom" />

        <com.waenhancer.preference.FileReaderPreference
            android:key="bootloader_spoofer_xml"
            android:dependency="bootloader_spoofer_custom"
            android:title="Use Custom keybox.xml file"
            android:summary="No file selected" />

        <Preference
            android:key="bootloader_spoofer_verify"
            android:title="Verify Spoofer"
            android:summary="Check spoofer trust chain, keys, and expiration" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="ampm"
            app:title="@string/ampm" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="segundos"
            app:summary="@string/segundosnahora_sum"
            app:title="@string/segundosnahora" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="secondstotime"
            app:summary="@string/textonahora_sum"
            app:title="@string/textonahora" />

        <Preference
            app:fragment="com.waenhancer.ui.fragments.TaskerPreferenceFragment"
            app:iconSpaceReserved="false"
            app:summary="@string/enable_tasker_automation_sum"
            app:title="@string/enable_tasker_automation" />

    </PreferenceCategory>

</PreferenceScreen>
