<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/embedded_media_downloads">

        <rikka.material.preference.MaterialSwitchPreference
            app:key="imagequality"
            app:summary="@string/imagequality_sum"
            app:title="@string/imagequality" />

        <com.waenhancer.preference.FileSelectPreference
            android:defaultValue="/sdcard/Download"
            app:directory="true"
            app:key="download_local"
            app:title="@string/local_download" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadstatus"
            app:summary="@string/statusdowload_sum"
            app:title="@string/statusdowload" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="downloadviewonce"
            app:summary="@string/downloadviewonce_sum"
            app:title="@string/downloadviewonce" />

        <com.waenhancer.preference.FloatSeekBarPreference
            android:defaultValue="60"
            app:key="video_limit_size"
            app:maxValue="90"
            app:minValue="30"
            app:title="@string/increase_video_size_limit"
            app:valueSpacing="10" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="videoquality"
            app:summary="@string/videoquality_sum"
            app:title="@string/videoquality" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_real_resolution"
            app:summary="@string/send_video_in_real_resolution_sum"
            app:title="@string/send_video_in_real_resolution" />

        <rikka.material.preference.MaterialSwitchPreference
            app:dependency="videoquality"
            app:key="video_maxfps"
            app:summary="@string/send_video_in_60fps_sum"
            app:title="@string/send_video_in_60fps" />

        <rikka.material.preference.MaterialSwitchPreference
            app:key="send_video_as_video_note"
            app:summary="@string/send_video_as_video_note_sum"
            app:title="@string/send_video_as_video_note" />

        <rikka.material.preference.MaterialSwitchPreference
            android:defaultValue="true"
            app:key="media_preview"
            app:summary="@string/enable_media_preview_sum"
            app:title="@string/enable_media_preview" />

    </PreferenceCategory>

</PreferenceScreen>
